--- a/lambdaDynamic.theme.css
+++ b/lambdaDynamic.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Lambda Dynamic","description":"Тема оформления под стиль LambdaRP сервера (динамическая)","author":"XanderWP&#Японец","version":"1.1.0"}*//{}
+//META{"name":"Lambda Dynamic","description":"Тема оформления под стиль LambdaRP сервера (динамическая)","author":"XanderWP&#Японец","version":"1.1.0","website":"https://github.com/LambdaRP/BetterDiscordTheme","source":"https://github.com/LambdaRP/BetterDiscordTheme/blob/master/lambdaDynamic.theme.css"}*//{}
 @import url('https://fonts.googleapis.com/css?family=Marvel');
 .app {
 	background-image: url("https://cdn.discordapp.com/attachments/465099899105574922/470681192937685003/-2.gif");
